2004-08-09 Magnus Hagdorn
 * fennscan1.config: saner switches
 * simple[1-3].config: forcing section renamed to 'EISMINT-1 moving margin'
 * marine margin handles sea-level change (glide.f90, glide_setup.f90 )
 * glimmer_config.f90: increased section name length to 50 characters
 * glimmer_velo.f90: adjust const flow parameter for EISMINT scenarios
 * simple_glide.f90: EISMINT climate is updated every time step
 * simple_forcing.f90: full set of EISMINT-1 forcing scenarios
 * updated docs (drivers.tex, glide.tex )
	
2004-08-03 Magnus Hagdorn
 * more doc stuff

2004-08-02 Magnus Hagdorn
 * more doc work

2004-07-30 Magnus Hagdorn
 * started work on updated docs

2004-07-15 Magnus Hagdorn
 * glint_timestep.f90: read the source, magi! ah well, temperature calculations seem to work...

2004-07-15 Magnus Hagdorn
 * glint_timestep.f90: must apply climate forcing every time step

2004-07-15 Magnus Hagdorn
 * glide_setup.f90: initialise tau0 which somehow escaped initialisation
 * fixed check when netCDF should be read from/written to(ncdf.f90.in, ncdf_file.f90.in, ncdf_infile.f90.in)
 * glimmer_proj.f90: fixed minor bug and renamed config file section
 * glint_climate.f90: renamed glimmer_lapserate to glint_lapserate
 * glint_initialise.f90: fixed api and added some proj initialisation
 * glint_io.f90.in: minor compile fixes
 * glint_timestep.f90: renamed some subroutines from glimmer_ to glint_
 * updated to use new glint stuff (glimmer.f90, bin2ncdf.f90, input2ncdf.f90, glimmer_example.f90, test_setup.f90)
 * updated greenland input file
	
2004-07-14 Magnus Hagdorn
 * glint_timestep.f90: timestep of glint instance

2004-07-13 Magnus Hagdorn
 * glimmer_degd.f90: load sp from glimmer_global
 * renamed module glimmer_ to glint_ (glimmer_global_grid.f90, glimmer_interp.f90, 
	glimmer_mbal.f90, glimmer_proj.f90)
 * removed old glimmer modules (glimmer_modu.f90, glimmer_object.f90, glimmer_outp.f90, 
	glimmer_setup.f90, glint_object.f90)