@@ -1,4 +1,10 @@
 2004-08-09 Magnus Hagdorn
+ * glimmer_velo.f90: fix bug with staggered grid (vertical velo is 
+   calculated on big grid), re-enabled normal gradient calc of ice
+   thicknesses (not sure about this...)
+ * fix bug in calculation of horizontal gradients (glimmer_thck.f90, glide.f90 )
+
+2004-08-09 Magnus Hagdorn
  * fennscan1.config: saner switches
  * simple[1-3].config: forcing section renamed to 'EISMINT-1 moving margin'
  * marine margin handles sea-level change (glide.f90, glide_setup.f90 )
